Mon Apr 16 16:13:07 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/tcp/TcpConnection.h:
        * dds/DCPS/transport/tcp/TcpConnection.inl:

          Made functions const.

        * dds/DCPS/transport/tcp/TcpTransport.cpp:

          Removed useless if and changed comment.

        * dds/DCPS/FilterEvaluator.cpp:

          Added default initialization value (coverity error).

Mon Apr 16 15:52:13 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/Discovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          Removed dissociate_*** and shutdown functions from the Discovery
          interface and changed some void functions to return a bool
          indicating if it was successful.

        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.h:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.cpp:

          Caught all CORBA::Exceptions thrown by DCPSInfo and returned
          appropriate indications.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/TopicImpl.cpp:

          Removed try/catch surrounding Discovery interface calls
          and changed to handle new status indications.

Fri Apr 13 15:27:13 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/BuiltInTopic/main.cpp:

          Fixed crash on exit caused by when global vars were going out of scope.

Fri Apr 13 15:15:25 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tools/excelRTD/ExcelRTD.mpc:
        * tools/monitor/MonitorTask.cpp:

          Compile fixes for monitoring tools.

Fri Apr 13 11:55:16 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tools/monitor/MonitorTask.cpp:
